working on bug fix for mobile scroll whitespace

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -80,8 +80,8 @@ body {
 }
 
 .fixed-bg {
-    overscroll-behavior: contain;
-    // overscroll-behavior: none;
+    // overscroll-behavior: contain;
+    overscroll-behavior: none;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
